--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <body>
     <!-- HEADER -->
-    <header class="header-section">
-      <div class="container header-container">
+    <header class="header">
+      <div class="container header__container ">
         <nav class="navigation">
           <a href="./index.html" class="logo link" lang="en"
-            ><span class="logo-web">Web</span>Studio</a
+            ><span class="logo__accent">Web</span>Studio</a
           >
           <ul class="site-nav list">
             <li class="nav-item">
