--- a/portfolio.html
+++ b/portfolio.html
@@ -26,32 +26,38 @@
 
   <body>
     <!-- HEADER -->
-    <header class="header-section">
-      <div class="container header-container">
-        <nav class="navigation">
-          <a href="./index.html" class="logo link" lang="en"
-            ><span class="logo-web">Web</span>Studio</a
-          >
-          <ul class="site-nav list">
-            <li class="nav-item"><a href="./index.html" class="nav-link link">Студія</a></li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="nav-link link current">Портфоліо</a>
+    <header class="header">
+      <div class="container header__container">
+        <a href="./index.html" class="header__logo link" lang="en"
+          ><span class="logo__accent">Web</span>Studio</a
+        >
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a href="./index.html" class="nav__link link">Студія</a>
             </li>
-            <li class="nav-item"><a href="#" class="nav-link link">Контакти</a></li>
+            <li class="nav__item">
+              <a href="./portfolio.html" class="nav__link nav__link--current link">Портфоліо</a>
+            </li>
+            <li class="nav__item"><a href="#" class="nav__link link">Контакти</a></li>
           </ul>
         </nav>
 
         <!-- Contacts header -->
-        <ul class="contact-list list">
-          <li class="contact-item">
-            <a href="mailto:info@devstudio.com" class="contact-email link"
-              ><svg class="contact-icon" width="16" height="12">
-                <use href="./images/icons.svg#mail"></use></svg>info@devstudio.com</a>
+        <ul class="contact__list list">
+          <li class="contact__item">
+            <a href="mailto:info@devstudio.com" class="contact__email link"
+              ><svg class="contact__icon" width="16" height="12">
+                <use href="./images/icons.svg#mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="contact-item">
-            <a href="tel:+380961111111" class="contact-phone link"
-              ><svg class="contact-icon" width="10" height="16">
-                <use href="./images/icons.svg#phone"></use></svg>+38 096 111 11 11</a>
+          <li class="contact__item">
+            <a href="tel:+380961111111" class="contact__phone link"
+              ><svg class="contact__icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -61,7 +67,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="visually-hidden">Наші проекти</h1>
+          <h1 class="section-title--hidden">Наші проекти</h1>
           <ul class="portfolio-list list">
             <li><button class="portfolio-btn" type="button">Усі</button></li>
             <li><button class="portfolio-btn" type="button">Веб-сайти</button></li>
@@ -69,14 +75,13 @@
             <li><button class="portfolio-btn" type="button">Дизайн</button></li>
             <li><button class="portfolio-btn" type="button">Маркетинг</button></li>
           </ul>
-
           <ul class="site-list list">
             <li class="site">
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img1.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project1.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -98,8 +103,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img2.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project2.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -121,8 +126,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img3.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project3.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -144,8 +149,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img4.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project4.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -167,8 +172,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img5.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project5.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -190,8 +195,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img6.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project6.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -213,8 +218,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img7.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project7.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -236,8 +241,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img8.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project8.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -259,8 +264,8 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/img9.jpg"
-                    alt="Web-site"
+                    src="./images/portfolio/project9.jpg"
+                    alt="Веб-сайт"
                     width="370"
                     height="294"
                   />
@@ -282,102 +287,111 @@
         </div>
       </section>
     </main>
- <!-- FOOTER -->
- <footer class="footer">
-  <div class="container">
-    <div class="footer-info">
-      <a class="logo logo-footer" href="./index.html" lang="en"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-      <address class="address">
-        <ul class="adress-list list">
-          <li>
-            <a
-              class="adress-map link"
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li class="contact-footer">
-            <a class="contact-link link" href="mailto:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-footer">
-            <a class="contact-link link" href="tel:+380961111111"> +38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
 
-    <!-- Footer socials -->
-    <div class="footer-socials">
-      <h2 class="section-title">Приєднуйтесь</h2>
-      <ul class="socials list">
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href="https://www.instagram.com"
-            target="_blank"
-            rel="nofollow noopener noreferrer"
-            aria-label="instagram"
-            ><svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#instagram"></use></svg></a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href="https://twitter.com"
-            target="_blank"
-            rel="nofollow noopener noreferrer"
-            aria-label="twitter"
-            ><svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#twitter"></use></svg></a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href="https://www.facebook.com"
-            target="_blank"
-            rel="nofollow noopener noreferrer"
-            aria-label="facebook"
-            ><svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#facebook"></use></svg></a>
-        </li>
-        <li class="socials-item">
-          <a
-            class="socials-link link"
-            href="https://www.linkedin.com"
-            target="_blank"
-            rel="nofollow noopener noreferrer"
-            aria-label="linkedin"
-            ><svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#linkedin"></use></svg></a>
-        </li>
-      </ul>
-    </div>
-    <form class="subscribe-form js-speaker-form">
-      <div class="subscribe-form-field">
-        <label for="subscribe-email" class="subscribe-form-label">Підпишіться на розсилку</label>
-        <input
-          type="email"
-          class="subscribe-form-input"
-          name="subscribe-email"
-          id="subscribe-email"
-          placeholder="E-mail"
-          minlength="4"
-        />
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer__container container">
+        <div>
+          <a class="footer__logo" href="./index.html" lang="en"
+            ><span class="logo__accent">Web</span>Studio</a
+          >
+          <address class="address">
+            <ul class="adress__list list">
+              <li>
+                <a
+                  class="address__link address__link--colored link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="address__item">
+                <a class="address__link link" href="mailto:info@devstudio.com">
+                  info@devstudio.com</a
+                >
+              </li>
+              <li class="address__item">
+                <a class="address__link link" href="tel:+380961111111"> +38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <!-- Footer socials -->
+        <div class="footer__socials">
+          <h2 class="footer__title section-title">Приєднуйтесь</h2>
+          <ul class="footer__list socials list">
+            <li>
+              <a
+                class="socials__link link"
+                href="https://www.instagram.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="instagram"
+                ><svg class="socials__icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="socials__link link"
+                href="https://twitter.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="twitter"
+                ><svg class="socials__icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="socials__link link"
+                href="https://www.facebook.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="facebook"
+                ><svg class="socials__icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a
+                class="socials__link link"
+                href="https://www.linkedin.com"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                aria-label="linkedin"
+                ><svg class="socials__icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <!-- Footer form -->
+        <form class="subscribe-form js-speaker-form">
+          <div>
+            <label for="subscribe-email" class="subscribe-form__label"
+              >Підпишіться на розсилку</label
+            >
+            <input
+              type="email"
+              class="subscribe-form__input"
+              name="subscribe-email"
+              id="subscribe-email"
+              placeholder="E-mail"
+              minlength="4"
+            />
+          </div>
+          <button class="subscribe-form__btn" type="submit">
+            Підписатися
+            <svg class="subscribe-form__icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
-      <button class="subscribe-btn" type="submit">Підписатися
-        <svg class="send-icon" width="24" height="24">
-          <use href="./images/icons.svg#icon-send"></use>
-        </svg>
-      </button>
-    </form>
-  </div>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
