--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
           <li class="contact__item">
             <a href="mailto:info@devstudio.com" class="contact__email link"
               ><svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#mail"></use></svg>info@devstudio.com</a>
+                <use href="./images/icons.svg#mail"></use></svg >info@devstudio.com</a>
           </li>
           <li class="contact__item">
             <a href="tel:+380961111111" class="contact__phone link"
               ><svg class="contact__icon" width="10" height="16">
-                <use href="./images/icons.svg#smartphone"></use></svg>+38 096 111 11 11</a>
+                <use href="./images/icons.svg#phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -86,14 +86,14 @@
                   <label for="phone" class="form__label">Телефон</label>
                   <input type="tel" class="form__input" name="phone" id="phone" />
                   <svg class="form__icon" width="18" height="18">
-                    <use href="./images/icons.svg#phone"></use>
+                    <use href="./images/icons.svg#phone-bl"></use>
                   </svg>
                 </div>
                 <div class="form__field">
                   <label for="email" class="form__label">Пошта</label>
                   <input type="email" class="form__input" name="email" id="email" />
                   <svg class="form__icon" width="18" height="18">
-                    <use href="./images/icons.svg#email"></use>
+                    <use href="./images/icons.svg#email-bl"></use>
                   </svg>
                 </div>
                 <div class="form__field form__field--comment">
@@ -124,7 +124,7 @@
         </div>
       </section>
 
-      <!-- Переваги -->
+      <!--feature -->
       <section class="feature">
         <div class="container">
           <h2 class="section-title section-title--hidden">Наші переваги</h2>
@@ -177,7 +177,7 @@
         </div>
       </section>
 
-      <!-- Чим ми займаємося -->
+      <!--work-->
       <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
@@ -216,7 +216,7 @@
         </div>
       </section>
 
-      <!-- Our team -->
+      <!--our team-->
       <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
@@ -433,7 +433,7 @@
         </div>
       </section>
 
-      <!--Clients -->
+      <!-- Постійні клієнти -->
       <section class="clients section">
         <div class="container">
           <h2 class="clients__title">Постійні клієнти</h2>
