--- a/portfolio.html
+++ b/portfolio.html
@@ -48,16 +48,12 @@
           <li class="contact__item">
             <a href="mailto:info@devstudio.com" class="contact__email link"
               ><svg class="contact__icon" width="16" height="12">
-                <use href="./images/icons.svg#mail"></use></svg
-              >info@devstudio.com</a
-            >
+                <use href="./images/icons.svg#mail"></use></svg>info@devstudio.com</a>
           </li>
           <li class="contact__item">
             <a href="tel:+380961111111" class="contact__phone link"
               ><svg class="contact__icon" width="10" height="16">
-                <use href="./images/icons.svg#smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+                <use href="./images/icons.svg#phone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -80,7 +76,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project1.jpg"
+                    src="./images/portfolio/img1.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -103,7 +99,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project2.jpg"
+                    src="./images/portfolio/img2.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -126,7 +122,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project3.jpg"
+                    src="./images/portfolio/img3.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -149,7 +145,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project4.jpg"
+                    src="./images/portfolio/img4.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -172,7 +168,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project5.jpg"
+                    src="./images/portfolio/img5.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -195,7 +191,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project6.jpg"
+                    src="./images/portfolio/img6.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -218,7 +214,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project7.jpg"
+                    src="./images/portfolio/img7.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -241,7 +237,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project8.jpg"
+                    src="./images/portfolio/img8.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -264,7 +260,7 @@
               <a class="site-link link" href="#">
                 <div class="visual-content">
                   <img
-                    src="./images/portfolio/project9.jpg"
+                    src="./images/portfolio/img9.jpg"
                     alt="Веб-сайт"
                     width="370"
                     height="294"
@@ -331,8 +327,7 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="instagram"
                 ><svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#instagram"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#instagram"></use></svg></a>
             </li>
             <li>
               <a
@@ -342,8 +337,7 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="twitter"
                 ><svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#twitter"></use></svg></a>
             </li>
             <li>
               <a
@@ -353,8 +347,7 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="facebook"
                 ><svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#facebook"></use></svg></a>
             </li>
             <li>
               <a
@@ -364,8 +357,7 @@
                 rel="nofollow noopener noreferrer"
                 aria-label="linkedin"
                 ><svg class="socials__icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#linkedin"></use></svg></a>
             </li>
           </ul>
         </div>
