--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open class="button" type="button" >Замовити послугу</button>
-          <div data-modal class="backdrop--is-hidden"></div>
+          <div data-modal class="backdrop backdrop--hidden"></div>
             <div class="modal">
               <button data-modal-close class="close--btn">
                 <svg class="close-icon" width="11" height="11">
