--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <a class="form__agree--link" href="#"> Умови договору </a>
                   </span>
                 </label>
-                <button class="button form__btn" type="submit">Відправити</button>
+                <button class="button " type="submit">Відправити</button>
               </form>
             </div>
           </div>
